# advent_of_code

./: .gitignore  Cargo.toml  LICENSE  README.md  gen_boilerplate.rs  helpers.rs
2025/1/: main.rs  tests.rs
2025/10/: main.rs  tests.rs
2025/2/: main.rs  tests.rs
2025/3/: main.rs  tests.rs
2025/4/: main.rs  tests.rs
2025/5/: main.rs  tests.rs
2025/6/: main.rs  tests.rs
2025/7/: main.rs  tests.rs
2025/8/: main.rs  tests.rs
2025/9/: main.rs  tests.rs
